[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Amy Keibler <amy@genomoncology.com>"]
edition = "2018"

[lib]
name = "advent_of_code"

[[bin]]
name = "day-one"

[[bin]]
name = "day-two"

[[bin]]
name = "day-three"

[[bin]]
name = "day-four"

[[bin]]
name = "day-five"

[dependencies]
nom = "5.0.1"
thiserror = "1.0.9"
